--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -30,12 +30,12 @@
 
 .image-container:hover {
   transform: translateY(-10px);
-  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
 }
 
 .image-container img {
   width: 100%;
   transition: transform 0.8s ease-in-out;
+  display: block;
 }
 
 .text-container {
